[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "line-fault-database"
version = "0.1.0"
description = "Line fault database management system"
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "pytest",
    "sqlalchemy-utils",
    "fastapi[standard]"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["database*", "api*", "crud*", "schemas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--verbose"]